cilium-network-policies/redis-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: egress-allow-redis
  namespace: app-s3-ui-obfuscator
  labels:
    issue: "SEGM-13770"
spec:
  endpointSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - s3-ui
  egress:
    - toCIDRSet:
        - cidr: 10.204.69.41/32
        - cidr: 10.204.70.30/32
        - cidr: 10.204.71.33/32
      toPorts:
        - ports:
          - port: '26379'
            protocol: TCP
          - port: '6379'
            protocol: TCP
